[gd_scene load_steps=17 format=3 uid="uid://ttfionm4jjiw"]

[ext_resource type="Script" path="res://objects/Enemys/fighter/fighter_enemy.gd" id="1_hf7jv"]
[ext_resource type="Script" path="res://objects/hurtbox.gd" id="2_2gs5r"]
[ext_resource type="Script" path="res://objects/Enemys/states/State Machine.gd" id="3_f3y4s"]
[ext_resource type="Script" path="res://objects/Enemys/fighter/states/fighter_knockback.gd" id="4_aj36c"]
[ext_resource type="Script" path="res://objects/Enemys/fighter/states/fighter_idle.gd" id="5_4afeg"]
[ext_resource type="Script" path="res://objects/Enemys/fighter/states/fighter_walk_away.gd" id="7_1goen"]
[ext_resource type="Script" path="res://objects/Enemys/fighter/states/fighter_attack.gd" id="8_brjpt"]
[ext_resource type="Script" path="res://objects/Enemys/fighter/states/fighter_pathfind.gd" id="8_ys7ct"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_foq3r"]
size = Vector2(32, 32)

[sub_resource type="LabelSettings" id="LabelSettings_41dxn"]
font_size = 9
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cj4s"]
size = Vector2(32, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_0jk20"]
radius = 15.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e4tgt"]
size = Vector2(34, 34)

[sub_resource type="Animation" id="Animation_56yeu"]
resource_name = "Attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_3sky3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4bv1x"]
_data = {
"Attack": SubResource("Animation_56yeu"),
"RESET": SubResource("Animation_3sky3")
}

[node name="fighter enemy" type="CharacterBody2D"]
z_index = 3
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_hf7jv")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.997072, 0, 0.142165, 1)
texture = SubResource("PlaceholderTexture2D_foq3r")

[node name="Label" type="Label" parent="."]
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = -1.0
text = "Enemy"
label_settings = SubResource("LabelSettings_41dxn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
radius = 32.0
avoidance_layers = 2
avoidance_mask = 2

[node name="hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("2_2gs5r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("RectangleShape2D_3cj4s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0jk20")

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 2

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="attack_box" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_box"]
shape = SubResource("RectangleShape2D_e4tgt")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="attack_box"]
libraries = {
"": SubResource("AnimationLibrary_4bv1x")
}

[node name="random_attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_f3y4s")
initial_state = NodePath("Fighter_Idle")

[node name="Fighter_Knockback" type="Node" parent="State_Machine"]
script = ExtResource("4_aj36c")

[node name="Fighter_Idle" type="Node" parent="State_Machine"]
script = ExtResource("5_4afeg")

[node name="Fighter_walk_away" type="Node" parent="State_Machine"]
script = ExtResource("7_1goen")

[node name="fighter_attack" type="Node" parent="State_Machine"]
script = ExtResource("8_brjpt")

[node name="Fighter_pathfind" type="Node" parent="State_Machine"]
script = ExtResource("8_ys7ct")

[connection signal="area_entered" from="attack_box" to="." method="_on_attack_box_area_entered"]
[connection signal="timeout" from="random_attack_cooldown" to="." method="_on_random_attack_cooldown_timeout"]
